# tinytorch_cpp

./: .gitignore  CMakeLists.txt  README.md  main.py  tinytorch_cpp_test.py  tinytorch_demo
include/: backward_nodes.hpp  linear.h  linear.hpp  loss.hpp  module.hpp  nn.hpp  node.hpp  optim.hpp  optimizer.hpp  tensor.h  tensor.hpp
python_draft/: test.py
src/: backward_nodes.cpp  bindings.cpp  loss.cpp  main.cpp  nn.cpp  tensor.cpp  tinytorch_cpp_bench.cpp
tinytorch-python/: main.py  pytorch_bench.py  tinytorch_cpp_bench.py
tinytorch-python/tinytorch_py/: backward_nodes.py  engine.py  losses.py  tensor.py
tinytorch-python/tinytorch_py/nn/: mlp.py  module.py
tinytorch_py/: backward_nodes.py  engine.py  losses.py  tensor.py
tinytorch_py/nn/: linear.py
tinytorch_py/optim/: sgd.py
